[UPD] Done index header

--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
     <header class="py-10-t">
       <div class="container">
         <div class="header-content">
-          <div class="bg-goldenrod d-flex">
-            <div class="logo pt-7 w20 border-dash">logo</div>
-            <div class="link-menu pt-7 w60 border-dash">
+          <div class="d-flex">
+            <div class="logo py-15-t w20">
+              <img src="./img/logo.svg" alt="logo">
+            </div>
+            <div class="link-menu py-20-t w60">
               <ul>
-                <li>link</li>
-                <li>link</li>
-                <li>link</li>
-                <li>link</li>
+                <li>Scarica</li>
+                <li>Perche&#769; Discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
               </ul>
             </div>
-            <div class="login pt-7 w20 border-dash">login</div>
+            <div class="login pt-10 w20">
+              <input type="submit" value="Accedi">
+            </div>
           </div>
         </div>
       </div>
