[UPD] Done index jumbotron

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
     </header>
 
     <main>
-      <div class="bg-navy">
+      <div id="jumbotron">
         <div class="container-sm">
           <div class="content py-60">
-            <div class="bg-fuchsia border-dash"></div>
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunita&#768; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu&#768; facile chiacchierare ogni giorno e ritrovarsi piu&#768; spesso.</p>
+            <input type="button" value="&#11107; Scarica per Mac" class="btn bg-white">
+            <input type="button" value="Apri Discord nel tuo browser" class="btn bg-dgrey">
           </div>
         </div>
       </div>
@@ -91,8 +94,8 @@
         <div class="container">
           <div class="content py-50-t">
             <div class="h50 d-flex bg-aquamarine justify-betw align-center">
-              <div class="h30 btn border-dash bg-pink">Logo</div>
-              <div class="h30 btn border-dash bg-pink">Bottone</div>
+              <div class="h30 footer-btn border-dash bg-pink">Logo</div>
+              <div class="h30 footer-btn border-dash bg-pink">Bottone</div>
             </div>
           </div>
         </div>
