[UPD] Done index main item1

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+      <!-- jumbo -->
       <div id="jumbotron">
         <div class="container-sm">
           <div class="content py-60">
@@ -43,14 +44,21 @@
           </div>
         </div>
       </div>
+      <!-- item 1 -->
       <div class="bg-white">
         <div class="container">
-          <div class="content py-60 d-flex">
-            <div class="w60 h350 border-dash bg-lblue"></div>
-            <div class="w40 h350 border-dash bg-pink"></div>
+          <div class="content item1 py-60 d-flex">
+            <div class="w60 item1-img">
+              <img src="./img/item1.svg" alt="item1">
+            </div>
+            <div class="w40 item1-text">
+              <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+              <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+            </div>
           </div> 
         </div>
       </div> 
+
       <div class="bg-lgrey">
         <div class="container">
           <div class="content py-60 d-flex">
@@ -59,6 +67,7 @@
           </div> 
         </div>
       </div>
+
       <div class="bg-white">
         <div class="container">
           <div class="content py-60 d-flex">
@@ -67,6 +76,7 @@
           </div> 
         </div>
       </div>
+
       <div class="bg-lgrey">
         <div class="container">
           <div class="content py-60">
