[UPD] Done index main item2

--- a/index.html
+++ b/index.html
@@ -47,27 +47,32 @@
       <!-- item 1 -->
       <div class="bg-white">
         <div class="container">
-          <div class="content item1 py-60 d-flex">
-            <div class="w60 item1-img">
+          <div class="content pt-60 d-flex">
+            <div class="w60">
               <img src="./img/item1.svg" alt="item1">
             </div>
-            <div class="w40 item1-text">
+            <div class="w40 item-text">
               <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-              <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+              <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
           </div> 
         </div>
       </div> 
-
+      <!-- item 2 -->
       <div class="bg-lgrey">
         <div class="container">
-          <div class="content py-60 d-flex">
-            <div class="w40 h350 border-dash bg-pink"></div>
-            <div class="w60 h350 border-dash bg-lblue"></div>
+          <div class="content pt-60 d-flex">
+            <div class="w40 item-text">
+              <h2>Dove trovarsi e&#768; facile</h2>
+              <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li&#768; e unirsi istantaneamente senza dove chiamare.</p>
+            </div>
+            <div class="w60">
+              <img src="./img/item2.svg" alt="item2">
+            </div>
           </div> 
         </div>
       </div>
-
+      <!-- item 3 -->
       <div class="bg-white">
         <div class="container">
           <div class="content py-60 d-flex">
