[UPD] Done index main item 3

--- a/index.html
+++ b/index.html
@@ -76,16 +76,23 @@
       <div class="bg-white">
         <div class="container">
           <div class="content py-60 d-flex">
-            <div class="w60 h350 border-dash bg-lblue"></div>
-            <div class="w40 h350 border-dash bg-pink"></div>
+            <div class="w60">
+              <img src="./img/item3.svg" alt="item3">
+            </div>
+            <div class="w40 item-text">
+              <h2>Da pochi a un fandom</h2>
+              <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
           </div> 
         </div>
       </div>
-
+      <!-- full width, item 4 -->
       <div class="bg-lgrey">
         <div class="container">
           <div class="content py-60">
-            <div class="h500 border-dash bg-dgreen"></div>
+            <div class="w100">
+              
+            </div>
           </div>
         </div>
       </div>
