--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         <div class="container">
           <div class="content py-60">
             <div class="w100">
-              
+              <h2 class="w80">Tecnologia affidabile per tenersi in contatto</h2>
+              <p class="w75 py-20-t">Video e audio a bassa altenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+              <img src="./img/item4-big.svg" alt="item4">
             </div>
           </div>
         </div>
