[FIX] Fixed indem main item4 missing bottom h3+btn

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div> 
         </div>
       </div>
-      <!-- full width, item 4 -->
+      <!-- item4 , full width -->
       <div class="bg-lgrey">
         <div class="container">
           <div class="content py-60">
@@ -94,6 +94,13 @@
               <h2 class="w80">Tecnologia affidabile per tenersi in contatto</h2>
               <p class="w75 py-20-t">Video e audio a bassa altenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
               <img src="./img/item4-big.svg" alt="item4">
+            </div>
+            <!-- bottom h3 -->
+            <div class="container w60">
+              <h3 class="bg-stars py-50-t">Pronto a iniziare la tua avventura?</h3>
+              <div class="content-btn pt-60">
+                <input type="button" value="&#11107; Scarica per Mac" class="btn" id="bottom-btn">
+             </div>
             </div>
           </div>
         </div>
