--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>struttura</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -36,11 +37,11 @@
       <!-- jumbo -->
       <div id="jumbotron">
         <div class="container-sm">
-          <div class="content py-60">
+          <div class="content py-60 color-white">
             <h1>Il tuo posto per parlare</h1>
             <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunita&#768; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu&#768; facile chiacchierare ogni giorno e ritrovarsi piu&#768; spesso.</p>
             <input type="button" value="&#11107; Scarica per Mac" class="btn bg-white">
-            <input type="button" value="Apri Discord nel tuo browser" class="btn bg-dgrey">
+            <input type="button" value="Apri Discord nel tuo browser" class="btn bg-dgrey color-white">
           </div>
         </div>
       </div>
@@ -95,11 +96,11 @@
               <p class="w75 py-20-t">Video e audio a bassa altenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
               <img src="./img/item4-big.svg" alt="item4">
             </div>
-            <!-- bottom h3 -->
+            <!-- item4 , bottom h3 -->
             <div class="container w60">
               <h3 class="bg-stars py-50-t">Pronto a iniziare la tua avventura?</h3>
               <div class="content-btn pt-60">
-                <input type="button" value="&#11107; Scarica per Mac" class="btn" id="bottom-btn">
+                <input type="button" value="&#11107; Scarica per Mac" class="btn color-white" id="bottom-btn">
              </div>
             </div>
           </div>
@@ -109,19 +110,69 @@
 
     <footer>
       <div class="bg-dgrey">
-
+        <!-- footer menu -->
         <div class="container">
-          <div class="content py-10-t py-50-b">
-            <div class="h400 border-dash d-flex">
-              <div class="border-dash bg-dpink"></div>
-              <div class="border-dash bg-teal"></div>
-              <div class="border-dash bg-teal"></div>
-              <div class="border-dash bg-teal"></div>
-              <div class="border-dash bg-teal"></div>
+          <div class="content d-flex">
+            <div class="w28 py-50-t">
+                <h3 class="w80 ">Il tuo posto per parlare</h3>
+                <div class="region color-white">
+                  <img src="./img/ita.png" alt="ita"> Italiano &#11167;
+                </div>
+                <div class="social color-white">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-square-facebook"></i>
+                  <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+            <div class="w18 py-50-t">
+                <h5>Prodotto</h5>
+                <ul class="color-white">
+                  <li>Scarica</li>
+                  <li>Perche&#769; Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                </ul>               
+            </div>
+            <div class="w18 py-50-t">
+                <h5>Compagnia</h5>
+                <ul class="color-white">
+                  <li>Chi siamo</li>
+                  <li>Lavora con noi</li>
+                  <li>Marchio</li>
+                  <li>Redazione</li>
+                  <li>Negozio</li>
+                </ul>
+            </div>
+            <div class="w18 py-50-t">
+                <h5>Risorse</h5>
+                <ul class="color-white">
+                  <li>Scarica</li>
+                  <li>Perche&#769; Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                  <li>Scarica</li>
+                  <li>Perche&#769; Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="w18 py-50-t">
+                <h5>Norme</h5>
+                <ul class="color-white">
+                  <li>Scarica</li>
+                  <li>Perche&#769; Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                </ul>
             </div>
           </div>
+          <hr class="color-blue">
         </div>
-        <hr>
         <div class="container">
           <div class="content py-50-t">
             <div class="h50 d-flex bg-aquamarine justify-betw align-center">
@@ -130,7 +181,7 @@
             </div>
           </div>
         </div>
-        <hr>
+        <hr class="color-white">
       </div>
     </footer>
 
