[UPD] Done index footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>struttura</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -174,10 +177,14 @@
           <hr class="color-blue">
         </div>
         <div class="container">
-          <div class="content py-50-t">
-            <div class="h50 d-flex bg-aquamarine justify-betw align-center">
-              <div class="h30 footer-btn border-dash bg-pink">Logo</div>
-              <div class="h30 footer-btn border-dash bg-pink">Bottone</div>
+          <div class="footer-content py-50-b">
+            <div class="d-flex">
+              <div class="logo py-15-t w50">
+                <img src="./img/logo.svg" alt="logo">
+              </div>
+              <div class="login pt-10 w50">
+                <input type="submit" value="Registrati" class="color-white">
+              </div>
             </div>
           </div>
         </div>
