--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     
-    <header class="py-10-t">
+    <header class="py-10-t color-white">
       <div class="container">
         <div class="header-content">
           <div class="d-flex">
@@ -191,6 +191,5 @@
         <hr class="color-white">
       </div>
     </footer>
-
   </body>
 </html>
