[FIX] Added working links and buttons

--- a/index.html
+++ b/index.html
@@ -17,19 +17,31 @@
         <div class="header-content">
           <div class="d-flex">
             <div class="logo py-15-t w20">
-              <img src="./img/logo.svg" alt="logo">
+              <a href="https://discord.com/" target="_blank">
+                <img src="./img/logo.svg" alt="logo">
+              </a>
             </div>
             <div class="link-menu py-20-t w60">
               <ul>
-                <li>Scarica</li>
-                <li>Perche&#769; Discord</li>
-                <li>Nitro</li>
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
+                <li>
+                  <a href="https://discord.com/download" target="_blank">Scarica</a>
+                </li>
+                <li>
+                  <a href="https://support.discord.com/hc/en-us/community/topics">Perche&#769; Discord</a>
+                </li>
+                <li>
+                  <a href="https://discord.com/nitro" target="_blank">Nitro</a>
+                </li>
+                <li>
+                  <a href="https://discord.com/safety" target="_blank">Sicurezza</a>
+                </li>
+                <li>
+                  <a href="https://support.discord.com/hc/en-us" target="_blank">Assistenza</a>
+                </li>
               </ul>
             </div>
             <div class="login pt-10 w20">
-              <input type="submit" value="Accedi">
+              <a href="https://discord.com/register" target="_blank" class="btn-shape">Accedi</a>
             </div>
           </div>
         </div>
@@ -43,8 +55,12 @@
           <div class="content py-60 color-white">
             <h1>Il tuo posto per parlare</h1>
             <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunita&#768; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu&#768; facile chiacchierare ogni giorno e ritrovarsi piu&#768; spesso.</p>
-            <input type="button" value="&#11107; Scarica per Mac" class="btn bg-white">
-            <input type="button" value="Apri Discord nel tuo browser" class="btn bg-dgrey color-white">
+            <div class="login pt-10 inline-block">
+              <a href="https://discord.com/download" target="_blank" class="btn bg-white color-black">&#11107; Scarica per Mac</a>
+            </div>
+            <div class="login pt-10 inline-block">
+              <a href="https://discord.com/login" target="_blank" class="btn bg-dgrey color-white">Apri Discord nel tuo browser</a>
+            </div>
           </div>
         </div>
       </div>
@@ -122,55 +138,113 @@
                   <img src="./img/ita.png" alt="ita"> Italiano &#11167;
                 </div>
                 <div class="social color-white">
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-square-facebook"></i>
-                  <i class="fa-brands fa-youtube"></i>
+                  <a href="https://x.com" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://instagram.com" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="https://facebook.com" target="_blank">
+                    <i class="fa-brands fa-square-facebook"></i>
+                  </a>
+                  <a href="https://youtube.com" target="_blank">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </div>
             </div>
             <div class="w18 py-50-t">
                 <h5>Prodotto</h5>
-                <ul class="color-white">
-                  <li>Scarica</li>
-                  <li>Perche&#769; Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
+                <ul>
+                  <li>
+                    <a href="https://discord.com/download" target="_blank">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us/community/topics">Perche&#769; Discord</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/nitro" target="_blank">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/safety" target="_blank">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us" target="_blank">Assistenza</a>
+                  </li>
                 </ul>               
             </div>
             <div class="w18 py-50-t">
                 <h5>Compagnia</h5>
                 <ul class="color-white">
-                  <li>Chi siamo</li>
-                  <li>Lavora con noi</li>
-                  <li>Marchio</li>
-                  <li>Redazione</li>
-                  <li>Negozio</li>
+                  <li>
+                    <a href="https://discord.com/company" target="_blank">Chi siamo</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/careers">Lavora con noi</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/branding" target="_blank">Marchio</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/blog" target="_blank">Redazione</a>
+                  </li>
+                  <li>
+                    <a href="https://discordmerch.com/?utm_lkey=z5bm6" target="_blank">Negozio</a>
+                  </li>
                 </ul>
             </div>
             <div class="w18 py-50-t">
                 <h5>Risorse</h5>
                 <ul class="color-white">
-                  <li>Scarica</li>
-                  <li>Perche&#769; Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
-                  <li>Scarica</li>
-                  <li>Perche&#769; Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
+                  <li>
+                    <a href="https://discord.com/download" target="_blank">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us/community/topics">Perche&#769; Discord</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/nitro" target="_blank">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/safety" target="_blank">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us" target="_blank">Assistenza</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/download" target="_blank">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us/community/topics">Perche&#769; Discord</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/nitro" target="_blank">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/safety" target="_blank">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us" target="_blank">Assistenza</a>
+                  </li>
                 </ul>
             </div>
             <div class="w18 py-50-t">
                 <h5>Norme</h5>
                 <ul class="color-white">
-                  <li>Scarica</li>
-                  <li>Perche&#769; Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
+                  <li>
+                    <a href="https://discord.com/download" target="_blank">Scarica</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us/community/topics">Perche&#769; Discord</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/nitro" target="_blank">Nitro</a>
+                  </li>
+                  <li>
+                    <a href="https://discord.com/safety" target="_blank">Sicurezza</a>
+                  </li>
+                  <li>
+                    <a href="https://support.discord.com/hc/en-us" target="_blank">Assistenza</a>
+                  </li>
                 </ul>
             </div>
           </div>
@@ -180,10 +254,12 @@
           <div class="footer-content py-50-b">
             <div class="d-flex">
               <div class="logo py-15-t w50">
-                <img src="./img/logo.svg" alt="logo">
+                <a href="https://discord.com/" target="_blank">
+                  <img src="./img/logo.svg" alt="logo">
+                </a>
               </div>
-              <div class="login pt-10 w50">
-                <input type="submit" value="Registrati" class="color-white">
+              <div class="login py-20-t w50">
+                <a href="https://discord.com/register" target="_blank" class="btn-shape">Registrati</a>
               </div>
             </div>
           </div>
